--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <header>  
         <nav>
-            <a href="#Inicio">Inicio</a>
-            <a href="h2'Perfil'">Perfil</a>
+            <a href="#">Inicio</a>
+            <a href="#">Perfil</a>
             <a href="#">Servicios</a>
             <a href="#">Novedades</a>
             <a href="#">Contacto</a>
