--- a/index.html
+++ b/index.html
@@ -212,12 +212,12 @@
   
     <section> 
       <h2 class="titulo">Contacto</h2>      
-      <form action="enviar.php" method="post">
+      <form action="gracias.html" method="post">
         <input type="text" name="Nombre" placeholder="Nombre" required>
         <input type="text" name="E-mail" placeholder="E-mail" required>
         <input type="text" name="Teléfono" placeholder="Teléfono" required>
         <textarea name="Mensaje" placeholder="Escriba aquí su mensaje" required></textarea>
-        <input type="submit" value="ENVIAR" id="boton" onclick="alert('Tu mensaje ha sido enviado')">
+        <input type="submit" value="ENVIAR" id="boton">
       </form>
       <br><br>
     </section>
